<resources>
    <string name="app_name">NotesNest</string>
    <string name="notes">Notes</string>
    <string name="logo">Logo</string>
    <string name="notesEmpty">It’s still empty :( Let’s start adding notes by clicking the dates below !</string>
    <string name="open_nav">Open Nav</string>
    <string name="close_nav">Close Nav</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_content">lorem ipsum dol amet is a long long text that i dont know what\'s the meaning of it and yeah thats all</string>
    <string name="noteDate">Date</string>
    <string name="dateInput">October 2, 2023</string>
    <string name="noteAlarm">Alarm</string>
    <string name="alarmInput">21:00 - 22:00</string>
    <string name="notesTextInput">lorem ipsum menggeming waw ini text panjang banget</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="chgPassword">Change Password</string>
    <string name="back">Back to Login Page</string>
    <string name="login">Login</string>
    <string name="fgPassword">Forgot Password?</string>
    <string name="reg">Register</string>
    <string name="regButton">Click Here to Register</string>
    <string name="alrHvAcc">Already Have an Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notesnest">NotesNest</string>
    <string name="navigation_drawer_open">Open\n</string>
    <string name="navigation_drawer_close">Close\n</string>
    <string name="default_web_client_id">653197675387-8tm88ei8leg6upto5dqr6l987gp4tedl.apps.googleusercontent.com</string>
    <string name="SignInWithGoogle">Login With Google</string>
    <string name="profile">Profile</string>
    <string name="backText">Back</string>
    <string name="delete">🗑️</string>
</resources>