<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNotes"
    android:background="@color/secondaryColor">

        <Button
            android:id="@+id/btnBackNote"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="&lt;"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:padding="0dp"
            android:layout_marginLeft="10dp"
            android:background="?android:attr/selectableItemBackground"
            />

    <ImageView
        android:id="@+id/btnDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="65sp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/delete"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp">
        <EditText
            android:id="@+id/inputTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:paddingTop="5dp"
            android:text="@string/notes_title"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:text="@string/noteDate"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/inputDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/dateInput"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:text="@string/noteAlarm"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/inputTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/alarmInput"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/inputContent"
            android:paddingEnd="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:paddingTop="20dp"
            android:text="@string/notesTextInput"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="normal" />


    </LinearLayout>

    <Button
        android:id="@+id/submitNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="20dp"
        android:text="Create"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>