<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".user.ForgotPwActivity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="53dp"
      android:layout_height="54dp"
      android:layout_marginTop="36dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logo" />

  <TextView
      android:id="@+id/notesNest"
      android:layout_width="53dp"
      android:layout_height="16dp"
      android:text="@string/notesnest"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="11sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <TextView
      android:id="@+id/welcomeTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="116dp"
      android:text="Change Password"
      android:textColor="@color/white"
      android:textSize="25sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/notesNest" />

  <EditText
      android:id="@+id/userEmail"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/rounded_edittext"
      android:hint="@string/email"
      android:padding="12dp"
      android:textColor="#000"
      android:textColorHint="#9e9e9e"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />

  <Button
      android:id="@+id/btnNewPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/chgPassword"
      android:textColor="#FFFFFF"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/userEmail"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/userEmail"
      app:layout_constraintTop_toBottomOf="@+id/userEmail" />

  <Button
      android:id="@+id/btnBack"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/back"
      android:textColor="#FFFFFF"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/btnNewPassword"
      app:layout_constraintStart_toStartOf="@+id/btnNewPassword"
      app:layout_constraintTop_toBottomOf="@+id/btnNewPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>