<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.drawerlayout.widget.DrawerLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/drawer_layout"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".MainActivity">-->

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?attr/actionBarSize"-->
<!--            android:elevation="4dp"-->
<!--            tools:context=".MainActivity"-->
<!--            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
<!--            android:title="Sidebar Menu" />-->

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondaryColor"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="37dp"
                android:layout_height="21dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />
        <TextView
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingRight="25dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:background="@color/secondaryColor"
                        android:src="@drawable/profile2" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/notes_title"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/notes_content"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="282dp"
                android:layout_height="34dp"
                android:text="@string/notesEmpty"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.499" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:id="@+id/coordinatorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.bottomappbar.BottomAppBar
                        android:id="@+id/bottomAppBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/white"
                        app:fabCradleMargin="10dp"
                        app:fabCradleRoundedCornerRadius="50dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:src="@drawable/baseline_add_24"
                            app:layout_anchor="@id/bottomAppBar"
                            app:maxImageSize="40dp"
                            app:tint="@color/primaryColor" />
                    </com.google.android.material.bottomappbar.BottomAppBar>
                </androidx.coordinatorlayout.widget.CoordinatorLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

<!--    </RelativeLayout>-->
<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:id="@+id/nav_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start"-->
<!--        app:headerLayout="@layout/nav_header"-->
<!--        app:menu="@menu/nav_menu" />-->


<!--</androidx.drawerlayout.widget.DrawerLayout>-->